<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvHeight"
        android:id="@+id/tvHeight"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18dp" />

    <EditText
        android:hint="請輸入身高單位CM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edHeight"
        android:layout_below="@+id/tvHeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvWeight"
        android:id="@+id/tvWeight"
        android:layout_below="@+id/edHeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp"
        android:textSize="18dp" />

    <EditText
        android:hint="請輸入體重單位KG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edWeight"
        android:layout_below="@+id/tvWeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="18dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btSubmit"
        android:id="@+id/btSubmit"
        android:layout_below="@+id/edWeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="176dp"
        android:textSize="18dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btClear"
        android:id="@+id/btClear"
        android:layout_alignBottom="@+id/btSubmit"
        android:layout_centerHorizontal="true"
        android:textSize="18dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btBack"
        android:id="@+id/btBack"
        android:layout_alignBottom="@+id/btClear"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="18dp" />
</RelativeLayout>